[gd_scene load_steps=2 format=3 uid="uid://cxy64etlgtm6s"]

[ext_resource type="Script" path="res://scripts/song_difficulty_screen.gd" id="1_rvgto"]

[node name="SongVariationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rvgto")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.246588, 0.246588, 0.246588, 1)

[node name="HeaderLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.5
offset_top = 50.0
offset_right = 122.5
offset_bottom = 122.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 52
text = "Song Title"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -117.0
offset_top = 180.0
offset_right = 117.0
offset_bottom = 230.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "בחר איך לנגן"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -140.0
offset_right = 320.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="SPButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "SP"

[node name="BossButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "BOSS"

[node name="LibraryButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "LIB"

[connection signal="pressed" from="HBoxContainer/SPButton" to="." method="_on_SP_pressed"]
[connection signal="pressed" from="HBoxContainer/BossButton" to="." method="_on_Boss_pressed"]
[connection signal="pressed" from="HBoxContainer/LibraryButton" to="." method="_on_Library_pressed"]
